--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
-    "@types/jest": "^27.5.1",
-    "babel-jest": "^28.1.0",
-    "jest": "^28.1.0",
-    "typescript": "^4.6.4"
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-typescript": "^7.15.0",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@types/jest": "^27.0.1",
+    "babel-jest": "^27.1.0",
+    "jest": "^27.1.0",
+    "rollup": "^2.57.0",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.2"
   }
 }
